# GestaltNotes

./: .env.example  .gitignore  README.md  compose.dev.yaml
.github/workflows/: backend_build.yml  backend_linting.yaml  frontend_build.yml
backend/: .env.testing  Dockerfile  Dockerfile.dev  firebase.json  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 59fdd751a4c1_added_username_to_user.py  9c3d7f290ef2_added_the_role_to_the_user_and_the_.py  9d5b6447e665_initial_migration.py  a79e4af2a753_added_generated_multiple_choice_.py  b248a8cf7e6b_added_constraint.py  b96abc282e1b_updated_course_model_added_blob.py  eb65a3e7967a_added_the_student_course_link.py
backend/src/: main.py
backend/src/batch/: add_users.py  auth.py
backend/src/core/: __init__.py  database_config.py  firebase.py  settings.py
backend/src/data/: __init__.py  course.py  message.py  role.py  thread.py  user.py
backend/src/model/: __init__.py  chat.py  course.py  generated_content.py  user.py
backend/src/service/: __init__.py
backend/src/service/chat/: __init__.py  exceptions.py  thread_db.py
backend/src/service/generated_content/: __init__.py  exceptions.py  generated_content_service.py  test.json
backend/src/service/storage/: firebase_storage.py
backend/src/service/user/: __init__.py  educator_service.py  exceptions.py  user_manager.py  userdb.py
backend/src/utils/: __init__.py  utils.py
backend/src/web/: __init__.py  course.py  dependencies.py  healtcheck.py  notes.py  thread.py  thread_model.py  user.py
backend/src/web/chat/: dependencies.py  thread.py
backend/src/web/generated_content/: dependencies.py  mcq.py
backend/src/web/user/: __init__.py  dependencies.py  health.py  user.py
backend/tests/: conftest.py
backend/tests/data/: test_message.py  test_thread.py  test_user.py
backend/tests/integration/service/user/: conftest.py  test_user_db.py  test_user_manager.py  user_examples.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  README.md  firebase.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/config/: api.ts  firebase_init.ts  index.ts
frontend/src/context/: AuthProvider.tsx  ChatContext.tsx
frontend/src/firebase/: auth.ts  auth_emulator_connect.ts  initialization.ts
frontend/src/layout/: AppLayout.tsx
frontend/src/pages/: ChatPage.tsx  Home.tsx  LectureNotes.tsx  MyAccount.tsx  MyGenContents.tsx  NotesPage.tsx  index.tsx
frontend/src/services/: NotesAPI.ts  courseManager.ts  index.ts  useEducatorData.ts  useNotes.ts  (+1 more)
scripts/: dev.sh
(+165 files in other folders)
