[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano Bermudez",email = "lberm007@ucr.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.6,<0.129.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
