[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano Bermudez",email = "lberm007@ucr.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.6,<0.129.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "ruff (>=0.15.14,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401"]
"tests/**/*.py" = ["ANN"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "TID", # tidy imports
    "RUF", # Ruff-specific
    "ASYNC", # async issues
    "ANN", # type annotations
    "RET", # return issues
    "ARG", # unused arguments
    "PTH", # pathlib recommendations
]

ignore = [
    "ANN101", # missing self annotation
    "ANN102", # missing cls annotation
]